# my_dashboard

./: pyproject.toml
my_dashbaord/: manage.py
my_dashbaord/api/: models.py  serializers.py  urls.py  views.py
my_dashbaord/api/migrations/: 0001_initial.py
my_dashbaord/my_dashbaord/: asgi.py  settings.py  urls.py  wsgi.py
my_dashboard_frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
my_dashboard_frontend/src/: App.tsx
